--- a/atlas-cinema-guru/package.json
+++ b/atlas-cinema-guru/package.json
@@ -6,7 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "6.1.0",
     "@fortawesome/free-solid-svg-icons": "6.1.0",
     "@fortawesome/react-fontawesome": "0.1.18",
-    "axios": "0.26.1",
+    "axios": "^1.7.2",
     "lodash": "4.17.21",
     "normalize.css": "8.0.1",
     "react": "^18.2.0",
