--- a/atlas-cinema-guru/package.json
+++ b/atlas-cinema-guru/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/free-solid-svg-icons": "6.1.0",
     "@fortawesome/react-fontawesome": "0.1.18",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "4.17.21",
     "normalize.css": "8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
