--- a/atlas-cinema-guru/package.json
+++ b/atlas-cinema-guru/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.1.0",
-    "@fortawesome/free-solid-svg-icons": "6.1.0",
-    "@fortawesome/react-fontawesome": "0.1.18",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "lodash": "4.17.21",
